data/all_generated_tests/raw_wast_tests/call_indirect_InfiniteLoops_4210.wast
;; 9. **Test Description**: Implement a loop where `call_indirect` targets a function with multiple operand types and varying return types, ensuring correct execution and trapping behavior.    - *Constraint Checked*: Handling of functions with varied operand/return types.    - *Infinite Loop Context*: Mismanagement of varied types should result in a trap, terminating the loop.

(assert_invalid
  (module
    (type (func (param i32 i32) (result i32)))
    (table 1 funcref)
    (elem (i32.const 0) $target)
    (func $target (param i32 i32) (result i32)
      (i32.add (local.get 0) (local.get 1))
    )
    (func $test
      (loop $loop
        (call_indirect (type 0) (i32.const 0) (i32.const 10) (i32.const 20))
        (br $loop)
      )
    )
  )
  "type mismatch"
)